# igl

./: .buildinfo  .clang-format  .cmake-format  .gitignore  A0XX_TASKS_IMPLEMENTATION_SUMMARY.md  CHANGELOG  CHIEF_JUDGE_FINAL.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODE_QUALITY_AUDIT.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_TASK_1.3.txt  CONTRIBUTING.md  D3D12BackendCodeReview.md  D3D12_API_CONFORMANCE_REPORT.md  D3D12_AUDIT_EXECUTIVE_SUMMARY.md  D3D12_AUDIT_FINAL_REPORT.md  D3D12_AUDIT_FINAL_STATUS.md  D3D12_AUDIT_IMPLEMENTATION_SUMMARY.md  D3D12_AUDIT_METRICS.md  D3D12_BACKEND_TASKS.md  D3D12_COMPREHENSIVE_CODE_REVIEW.md  D3D12_COMPREHENSIVE_TEST_RESULTS.md  D3D12_CONFORMANCE_ACTION_ITEMS.md  D3D12_DXIL_SIGNING_STATUS.md  D3D12_FINAL_IMPLEMENTATION_SUMMARY.md  D3D12_FINAL_STATUS.md  D3D12_IMPLEMENTATION_SUMMARY.md  D3D12_PIPELINE_CODE_REVIEW.md  D3D12_ROADMAP.md  D3D12_SESSION_PROGRESS.txt  D3D12_SESSION_SUMMARY.md  D3D12_TASK_1.3_IMPLEMENTATION_REPORT.md  D3D12_TECHNICAL_AUDIT_REPORT.md  D3D12_UNIFIED_CODE_REVIEW.md  D3D12_UNIT_TESTS_PROGRESS.md  D3D12_UNIT_TESTS_REMAINING_WORK.md  DIRECTX12_MIGRATION_PLAN.md  DIRECTX12_MIGRATION_PROGRESS.md  DX12_COD005_IMPLEMENTATION_SUMMARY.md  (+76 more)
IGLU/: CMakeLists.txt
IGLU/bitmap/: BitmapWriter.cpp  BitmapWriter.h
IGLU/command_buffer_allocator/: ICommandBufferAllocator.cpp  ICommandBufferAllocator.h
IGLU/imgui/: InputListener.cpp  InputListener.h  KeyCodeTranslator.cpp  KeyCodeTranslator.h  Session.cpp  Session.h  compile_shaders.bat  compile_shaders.py  imgui_ps_d3d12.hlsl  imgui_ps_d3d12_fxc.cso  imgui_ps_d3d12_fxc.h  imgui_vs_d3d12.hlsl  imgui_vs_d3d12_fxc.cso  imgui_vs_d3d12_fxc.h  vs_reflect.txt
IGLU/managedUniformBuffer/: ManagedUniformBuffer.cpp  ManagedUniformBuffer.h
IGLU/nanovg/: demo.c  demo.cpp  demo.h  nanovg.c  nanovg_igl.cpp  nanovg_igl.h  nanovg_mtl.cpp  nanovg_mtl.h  nanovg_mtl.m  nanovg_mtl_shaders.metal  perf.c  shader_metal.h  shader_opengl.h  shader_opengl410.h  shader_opengl460.h
IGLU/sentinel/: Assert.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandQueue.cpp  CommandQueue.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  PlatformDevice.cpp  PlatformDevice.h
IGLU/shaderCross/: ShaderCross.cpp  ShaderCross.h  ShaderCrossUniformBuffer.cpp  ShaderCrossUniformBuffer.h
IGLU/simdtypes/: SimdTypes.h  SimdUtilities.h
IGLU/simple_renderer/: Drawable.cpp  Drawable.h  ForwardRenderPass.cpp  ForwardRenderPass.h  Material.cpp  Material.h  ParametricVertexData.cpp  ParametricVertexData.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUniforms.cpp  ShaderUniforms.h  VertexData.cpp  VertexData.h
IGLU/state_pool/: ComputePipelineStatePool.cpp  ComputePipelineStatePool.h  DepthStencilStatePool.cpp  DepthStencilStatePool.h  RenderPipelineStatePool.cpp  RenderPipelineStatePool.h  StatePool.h  VertexInputStatePool.cpp  VertexInputStatePool.h
IGLU/texture_accessor/: ITextureAccessor.h  MetalTextureAccessor.h  MetalTextureAccessor.mm  OpenGLTextureAccessor.cpp  OpenGLTextureAccessor.h  TextureAccessorFactory.cpp  TextureAccessorFactory.h  VulkanTextureAccessor.cpp  VulkanTextureAccessor.h
IGLU/texture_loader/: DataReader.cpp  DataReader.h  IData.cpp  IData.h  ITextureLoader.cpp  ITextureLoader.h  ITextureLoaderFactory.cpp  ITextureLoaderFactory.h  TextureLoaderFactory.cpp  TextureLoaderFactory.h
IGLU/uniform/: Collection.cpp  Collection.h  CollectionEncoder.cpp  CollectionEncoder.h  Descriptor.cpp  Descriptor.h  Encoder.cpp  Encoder.h  Trait.h
lvk/: CMakeLists.txt  HelpersGLFW.h  HelpersImGui.cpp  HelpersImGui.h  LVK.cpp  LVK.h  LVK.mm  Pool.h
lvk/vulkan/: CMakeLists.txt  VulkanClasses.cpp  VulkanClasses.h  VulkanUtils.cpp  VulkanUtils.h
samples/: CMakeLists.txt  HelloTriangle.cpp  Tiny.cpp  Tiny_Mesh.cpp  Tiny_MeshLarge.cpp
samples/desktop/: CMakeLists.txt
samples/wasm/: CMakeLists.txt  Common.cpp  Common.h  Tiny_Mesh.cpp  Triangle.cpp  igl.html  tiny.cpp
samples/webassembly/: CMakeLists.txt
shell/: CMakeLists.txt
shell/android/: CMakeLists.txt  README.md
shell/apps/: SessionApp.cpp
shell/csharp/: ThreeCubes.sln
shell/engine/: EngineSession.cpp  EngineSession.h
shell/ios/: AppDelegate.h  AppDelegate.mm  BackendVersion.h  BackendVersion.mm  CMakeLists.txt  IglShellPlatformAdapter.h  IglShellPlatformAdapterInternal.hpp  IglSurfaceTexturesAdapter.h  IglSurfaceTexturesAdapterInternal.hpp  RenderSessionController.h  RenderSessionController.mm  RenderSessionFactoryAdapter.h  RenderSessionFactoryAdapterInternal.hpp  RenderSessionFactoryProvider.h  RenderSessionFactoryProvider.mm  View.h  View.m  ViewController.h  ViewController.mm  main.m  main.mm
shell/mac/: AppDelegate.mm  CMakeLists.txt  GLView.h  GLView.mm  HeadlessView.h  HeadlessView.m  HeadlessView.mm  MetalView.h  MetalView.m  ViewController.h  ViewController.mm  VulkanView.h  VulkanView.mm  main.m  main.mm
shell/openxr/: CMakeLists.txt  XrApp.h  XrComposition.cpp  XrComposition.h  XrCompositionProjection.cpp  XrCompositionProjection.h  XrCompositionQuad.cpp  XrCompositionQuad.h  XrHands.cpp  XrHands.h  XrLog.cpp  XrLog.h  XrPassthrough.cpp  XrPassthrough.h  XrPlatform.h  XrRefreshRate.cpp  XrRefreshRate.h  XrSwapchainProvider.cpp  XrSwapchainProvider.h
shell/renderSessionTests/: BasicFramebufferTests.cpp  IGLSampleTests.cpp
shell/renderSessions/: BasicFramebufferSession.cpp  BasicFramebufferSession.h  BindGroupSession.cpp  BindGroupSession.h  BindlessBufferSession.cpp  BindlessBufferSession.h  BufferBindGroupSession.cpp  BufferBindGroupSession.h  BufferMappingSession.cpp  BufferMappingSession.h  CheckerboardMipmapSession.cpp  CheckerboardMipmapSession.h  ClothSimulationSession.cpp  ClothSimulationSession.h  ClothSimulationShaders.h  ColorSession.cpp  ColorSession.h  ComputeSession.cpp  ComputeSession.h  CopyOperationsSession.cpp  CopyOperationsSession.h  DepthBiasSession.cpp  DepthBiasSession.h  DrawIndirectSession.cpp  DrawIndirectSession.h  DrawInstancedSession.cpp  DrawInstancedSession.h  EmptySession.cpp  EmptySession.h  EngineTestSession.cpp  EngineTestSession.h  FireworksSession.cpp  FireworksSession.h  (+60 more)
(+1234 files in other folders)
